# cookiecutter-qtquick-cmake-catch-trompeloeil-live

./: README.md
{{cookiecutter.project_slug}}/: CMakeLists.txt  README.md
{{cookiecutter.project_slug}}/app/: CMakeLists.txt
{{cookiecutter.project_slug}}/tests/: CMakeLists.txt
